// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct chart data object for a combined report 1`] = `
Object {
  "datasets": Array [
    Object {
      "data": Array [
        123,
        5,
        null,
      ],
      "label": "report A",
    },
    Object {
      "data": Array [
        1,
        null,
        3,
      ],
      "label": "report B",
    },
  ],
  "labels": Array [
    "Flownode Foo",
    "Barrrr",
    "Flownode DAR",
  ],
}
`;

exports[`should return correct chart data object for a combined report with correct date order 1`] = `
Object {
  "datasets": Array [
    Object {
      "data": Array [
        null,
        123,
      ],
      "label": "report A",
    },
    Object {
      "data": Array [
        5,
        null,
      ],
      "label": "report B",
    },
  ],
  "labels": Array [
    "Mar 2017",
    "Dec 2017",
  ],
}
`;
